fix css on tablet and mobile

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -110,7 +110,7 @@ section {
     } 
   }
   .content-2 {
-    height: 85vh;
+    // min-height: 80vh;
     width: 100%;
     position: relative;
     background-color: #8EC5FC;
@@ -121,6 +121,7 @@ section {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    padding-top: 200px;
     &::before {
       top: 0;
       left: 0;
@@ -138,7 +139,8 @@ section {
       padding-bottom: 120px;
     }
     .left-section {
-      // padding-left: 9.5em;
+      padding-left: 240px;
+      padding-bottom: 160px;
       padding-right: 90px;
       margin: 0;
       margin-left: auto;
@@ -478,8 +480,8 @@ section {
 }
 
 .blogpost {
-  .container {
-    .row {
+  >.container {
+    >.row {
       margin-top: 150px;
       .content {
         .title, .paragraph, .date-and-author, .tags, .disqus-comments {
@@ -560,20 +562,19 @@ section {
         // }
       }
       .latest-news {
-        &.row {
-          margin-top: 20px;
-          .blog {
-            .card {
-              .paragraph {
-                display: none;
-              }
-              .tags {
-                margin-left: 0;
-                margin-bottom: 15px;
-              }
-              .btn {
-                display: none;
-              }
+        margin-top: 20px;
+        margin-bottom: 80px;
+        .blog {
+          .card {
+            .paragraph {
+              display: none;
+            }
+            .tags {
+              margin-left: 0;
+              margin-bottom: 15px;
+            }
+            .btn {
+              display: none;
             }
           }
         }
@@ -716,6 +717,12 @@ section {
   }
 }
 
+.tags {
+  &.list-page {
+    padding: 0;
+  }
+}
+
 .about, .contact-us {
   &.list-page {
     min-height: 60vh;
@@ -725,38 +732,244 @@ section {
 
 // bootstrap container max width on 1400px is 1320px
 
-@media (min-width: 992px) {
+@media (max-width: 1400px) {
   .section-1 {
     .content-2 {
-      height: 70vh;
       .left-section {
-          max-width: 480px;
-          padding-bottom: 100px;
+        padding-left: 120px;
+        padding-bottom: 100px;
       }
     }
   }
 }
 
-@media (min-width: 1200px) {
+// ipad pro portrait mode
+@media (max-width: 1025px) {
+  .blogpost {
+    .container {
+      .row {
+        .content {
+          .title, .paragraph, .date-and-author, .tags, .disqus-comments {
+            padding: 0 100px;
+          }
+        }
+        .sub-title, .latest-news {
+          padding: 0 100px;
+        }
+      }
+    }
+  }
+  .products {
+    &.list-page {
+      .container {
+        .row {
+          .card-wrapper {
+            width: calc(100% / 3);
+          }
+        }
+      }
+    }
+  }
   .section-1 {
     .content-2 {
-      height: 70vh;
-      .left-section {
-          max-width: 570px;
-          padding-bottom: 160px;
+      flex-direction: column-reverse;
+      >div {
+        width: 100%;
+      }
+      .right-section {
+        padding-bottom: 40px;
+        text-align: center;
+        img {
+          width: 50%;
+        }
       }
     }
   }
 }
 
-@media (min-width: 1400px) {
-  .section-1 {
-    .content-2 {
-      height: 85vh;
-      .left-section {
-          max-width: 660px;
-          padding-bottom: 200px;
+@media (max-width: 992px) {
+  section {
+    h1.title {
+      font-size: 2rem;
+    }
+  }
+
+  .list-page {
+    h1.title {
+      font-size: 2rem;
+      margin-bottom: 25px;
+    }
+  }
+
+  .card-wrapper {
+    width: 50%;
+  }
+  .section-2 {
+    &.blogs {
+      .container {
+        .row {
+          .blog {
+            &:nth-of-type(1), &:nth-of-type(4) {
+              width: 50%;
+            }
+          }
+        }
+      }
+    }
+  }
+  .product {
+    &.single-page {
+      .container {
+        .row {
+          .product-slideshows {
+            padding-right: 10px;
+          }
+        }
+      }
+    }
+  }
+  .products {
+    &.list-page {
+      .container {
+        .row {
+          .card-wrapper {
+            width: calc(100% / 2);
+          }
+        }
+      }
+    }
+  }
+  .blogpost {
+    .container {
+      .row {
+        .content {
+          .title, .paragraph, .date-and-author, .tags, .disqus-comments {
+            padding: 0 60px;
+          }
+        }
+        .sub-title, .latest-news {
+          padding: 0 60px;
+        }
       }
     }
   }
 }
+
+@media (max-width: 700px) {
+  .card-wrapper {
+    width: 100%;
+  }
+  .section-2 {
+    &.blogs {
+      .container {
+        .row {
+          .blog {
+            &:nth-of-type(1), &:nth-of-type(4) {
+              width: 100%;
+            }
+          }
+        }
+      }
+    }
+  }
+  .products {
+    &.list-page {
+      .container {
+        .row {
+          .card-wrapper {
+            width: calc(100%);
+          }
+        }
+      }
+    }
+  }
+  .blogpost {
+    >.container {
+      >.row {
+        .content {
+          padding: 0;
+          .title, .paragraph, .date-and-author, .tags, .disqus-comments {
+            padding: 0 20px;
+          }
+          .title {
+            font-size: 2rem;
+          }
+          .date-and-author {
+            font-size: 0.8rem;
+            flex-direction: column;
+            align-items: flex-start;
+            margin-bottom: 20px;
+            * {
+              margin-bottom: 4px;
+            }
+            i {
+              display: none;
+            }
+          }
+          .featured-image {
+            margin-bottom: 30px;
+            border-radius: 0;
+            img {
+              border-radius: 0;
+              height: 200px;
+            }
+          }
+          .paragraph {
+            font-size: 1rem;
+          }
+        }
+        .sub-title, .latest-news {
+          padding: 0 20px;
+        }
+      }
+    }
+  }
+  .section-1 {
+    .content-2 {
+      padding-top: 150px;
+      .left-section {
+        padding: 0 40px 60px;
+      }
+      .right-section {
+        padding-bottom: 40px;
+        text-align: center;
+        img {
+          width: 80%;
+        }
+      }
+    }
+  }
+}
+
+// @media (min-width: 992px) {
+//   .section-1 {
+//     .content-2 {
+//       .left-section {
+//           max-width: 480px;
+//           padding-bottom: 100px;
+//       }
+//     }
+//   }
+// }
+
+// @media (min-width: 1200px) {
+//   .section-1 {
+//     .content-2 {
+//       .left-section {
+//           max-width: 570px;
+//           padding-bottom: 160px;
+//       }
+//     }
+//   }
+// }
+
+// @media (min-width: 1400px) {
+//   .section-1 {
+//     .content-2 {
+//       .left-section {
+//           max-width: 660px;
+//           padding-bottom: 200px;
+//       }
+//     }
+//   }
+// }
